Some minor fixes needed to get the page workign on small devices

--- a/css/info.css
+++ b/css/info.css
@@ -9,3 +9,10 @@
 .info-content-container a {
   color: black !important;
 }
+
+@media only screen and (max-width: 700px) {
+  .info-content-container {
+    padding-left: 0;
+    padding-right: 0;
+  }
+}
